[package]
name = "homomorphic-encryption"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
crypto-bigint = { version = "0.5", features = ["rand_core", "serde"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
group = { git = "https://github.com/dwallet-labs/group.git" }
thiserror = "1.0"

[dev-dependencies]
rstest = "0.18"
rand_core = { version = "0.6", features = ["std"] }

[features]

